[gd_scene load_steps=3 format=3 uid="uid://bl2u1vwrkn7sx"]

[ext_resource type="Script" path="res://worm.gd" id="1_isia4"]
[ext_resource type="PackedScene" uid="uid://ss2xikvy6bt7" path="res://worm_segment.tscn" id="1_lbykk"]

[node name="Worm" type="Node2D"]
script = ExtResource("1_isia4")

[node name="WormSegment1" parent="." instance=ExtResource("1_lbykk")]
position = Vector2(142, 234)

[node name="WormSegment2" parent="." instance=ExtResource("1_lbykk")]
position = Vector2(180, 231)

[node name="WormSegment3" parent="." instance=ExtResource("1_lbykk")]
position = Vector2(216, 233)
